Add media types
