# app/Enums/api/v1/MediaTypes.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Enums\api\v1;
+
+enum MediaTypes: string
+{
+    case Файл = 'media_file';
+    case Ссылка = 'link';
+}
