# app/Http/Controllers/api/v1/Swagger/StoryAStoryItemsController.php
@@ -83,7 +83,9 @@ use App\Http\Controllers\api\v1\ApiController;
  *                           type="object",
  *                           @OA\Property(property="id", type="integer", example=2),
  *                           @OA\Property(property="title", type="string", example="Тестовый Сторис"),
- *                           @OA\Property(property="file_path", type="string", example="http://stories.test/storage/stories/items/01J7BMT94V1W2D0MFYPFWEAWEB.webp"),
+ *                       @OA\Property(property="media_type", type="string", example="media_file"),
+ * *                       @OA\Property(property="file_path", type="string", example="http://stories.test/storage/stories/items/01J7BMT94V1W2D0MFYPFWEAWEB.webp"),
+ * *                       @OA\Property(property="link", type="string", example="https://www.instagram.com/p/CRYgfzNnoST/?utm_medium=copy_link"),
  *                           @OA\Property(property="position", type="integer", example=1),
  *                           @OA\Property(property="is_published", type="boolean", example=true),
  *                       ),
@@ -147,7 +149,9 @@ use App\Http\Controllers\api\v1\ApiController;
  *                       type="object",
  *                       @OA\Property(property="id", type="integer", example=21),
  *                       @OA\Property(property="title", type="string", example="Тестовый Элемент Сториса"),
+ *                       @OA\Property(property="media_type", type="string", example="media_file"),
  *                       @OA\Property(property="file_path", type="string", example="http://stories.test/storage/stories/items/01J7BMT94V1W2D0MFYPFWEAWEB.webp"),
+ *                       @OA\Property(property="link", type="string", example="https://www.instagram.com/p/CRYgfzNnoST/?utm_medium=copy_link"),
  *                       @OA\Property(property="position", type="integer", example=1),
  *                       @OA\Property(property="is_published", type="boolean", example=true),
  *                   ),
